회원가입 js 추가, 전체적인 레이아웃 수정, 일정짜기 페이지 일부 구현

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         <div id="menu">
             <ul>
                 <li><a href="introduce.html">About Let's trip</a></li>
-                <li>일정짜기</li>
+                <li><a href="plan1.html">일정짜기</a></li>
                 <li>예산짜기</li>
                 <li>My diary</li>
                 <li>다이어리 구경하기</li>
