--- a/join.html
+++ b/join.html
@@ -70,10 +70,11 @@
                     </div>
                     <div class="join_content">
                         <h3 class="join_title">전화번호</h3>
-                        <input class="input_phone_number" type="text" name="phone_number" title="전화번호" placeholder="전화번호 입력(- 제외)">
+                        <input class="input_phone_number" type="text" onkeyup="checkPhone(this.value)" name="phone_number" title="전화번호" placeholder="전화번호 입력(- 제외)">
+                        <span class="text_check"></span>
                     </div>
                     <div class="join_button_content">
-                        <button class="join_button" type="button">
+                        <button class="join_button" type="button" onclick="joinConfirm()">
                             <span class="button_text">가입하기</span>
                         </button>
                     </div>
