--- a/plan1.html
+++ b/plan1.html
@@ -2,11 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>About Let's trip!</title>
+        <title>travel plan</title>
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="introduce.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="introduce.js"></script>
+        <link rel="stylesheet" href="plan1.css">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet"> <!--한글-->
         <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"> <!--영어(타이틀)-->
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet"> <!--영어-->
@@ -31,23 +29,18 @@
                 <li>다이어리 구경하기</li>
             </ul>
         </div>
-        <div id="introduce_page">
-                <div class="sub_page1"> 
-                    <p class="subject">준비하고, 기록하고, 나누자!</p>
-                    <p class="explanation">
-                        여행 준비 단계부터 마무리까지 함께 할 수 있는 Let's trip!<br>
-                        알차게 준비하고, 준비할 때의 마음을 Let's trip에 기록합니다.<br>
-                        여행을 즐기며 그때의 기분을 실시간으로 기록합니다.<br>
-                        여행을 마친 후 여행 기간 동안의 기분을 다시 돌아보며 여행을 추억합니다.<br>
-                        Let's trip의 모든 사람들과 자신의 여행 경험을 나누고, <br>
-                        다른 사람들의 여행의 순간 순간의 감정을 함께 느껴봅니다. <br>
-                        당신의 여행의 순간 순간을 <br>
-                        Let's trip이 함께합니다!
-                    </p>
+        <div id="plan1st">
+            <h1 class="plan1st_title">어디로 여행을 떠나시나요?</h1>
+            <div class="isOverseas">
+                <div class="isOverseas_select">
+                    <a href="plan2Korea"><img class="isOverseas_img" src="image/korea_travel.jpg" width="400px" height="250px"></a>
+                    <div class="plan1st_explanation">국내</div>
                 </div>
-                <div class="sub_page2">
-                    <img src=".\\image\\introduce.jpg" width="600px" height="400px">;
+                <div class="isOverseas_select">
+                    <a href="plan2Overseas"><img class="isOverseas_img" src="image/overseas.jpg" width="400px" height="250px"></a>
+                    <div class="plan1st_explanation">해외</div>
                 </div>
+            </div>
         </div>
         <div id="footer">
             (주)Let's trip<br>
